# gnome-maps

./: .eslintrc.yaml  .gitignore  .gitlab-ci.yml  .jscsrc  .jshintrc  CHANGELOG.md  CONTRIBUTING.md  COPYING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  gnome-maps.desktop.in  gnome-maps.doap  meson.build  meson_post_install.py  org.gnome.Maps.json
README /: w Info
data/: Makefile.am  buildings.mapcss  gnome-maps-dark.css  gnome-maps.appdata.xml.in  gnome-maps.css  gnome-maps.desktop.in  gnome-maps.desktop.in.in  gnome-maps.mapcss  landuse.mapcss  maps-service.json  meson.build  nodes.mapcss  org.gnome.Maps.appdata.xml.in  org.gnome.Maps.appdata.xml.in.in  org.gnome.Maps.data.gresource.xml  org.gnome.Maps.data.gresource.xml.in  org.gnome.Maps.desktop.in  org.gnome.Maps.desktop.in.in  org.gnome.Maps.gschema.xml  org.gnome.Maps.gschema.xml.in  org.gnome.Maps.metainfo.xml.in.in  org.gnome.Maps.service.in  org.gnome.maps.gschema.xml.in  osm-types.json  roads.mapcss  style.css  transit-providers.json
data/icons/: Makefile.am  meson.build
data/icons/stations/: LICENCE
data/shields/: layer.json  meson.build  org.gnome.Maps.shields.gresource.xml  shields.json
data/styles/osm-liberty/: LICENSE.md  README.md  sprites@2x.json  style.json
data/ui/: app-menu.ui  attribution-logo.ui  auxillary-view.blp  auxillary-view.ui  busy-marker.ui  check-in-dialog.ui  context-menu.blp  context-menu.ui  export-view-dialog.blp  export-view-dialog.ui  favorite-edit-dialog.ui  favorite-list-row.blp  favorite-list-row.ui  favorites-popover.blp  favorites-popover.ui  headerbar-left.blp  headerbar-left.ui  headerbar-right.blp  headerbar-right.ui  help-overlay.ui  instruction-row.blp  instruction-row.ui  layers-popover.blp  layers-popover.ui  location-service-dialog.ui  location-service-notification.ui  main-window.blp  main-window.ui  map-bubble.ui  navigation-bar.blp  notification.ui  open-with-row.blp  open-with-row.ui  osm-account-dialog.blp  osm-account-dialog.ui  osm-discard-dialog.blp  osm-discard-dialog.ui  osm-edit-address.ui  osm-edit-dialog.blp  osm-edit-dialog.ui  (+63 more)
lib/: Makefile.am  maps-contact-store.c  maps-contact-store.h  maps-contact.c  maps-contact.h  maps-download-store.c  maps-download-store.h  maps-enum-types.c.template  maps-enum-types.h.template  maps-file-data-source.c  maps-file-data-source.h  maps-file-tile-source.c  maps-file-tile-source.h  maps-gtfs-agency.c  maps-gtfs-agency.h  maps-gtfs-db-defs.h  maps-gtfs-db-funcs.c  maps-gtfs-db-funcs.h  maps-gtfs-route.c  maps-gtfs-route.h  maps-gtfs-stop-time.c  maps-gtfs-stop-time.h  maps-gtfs-stop.c  maps-gtfs-stop.h  maps-gtfs-trip.c  maps-gtfs-trip.h  maps-gtfs.c  maps-gtfs.h  maps-mapbox-renderer.c  maps-mapbox-renderer.h  maps-mapbox-text-layer.c  maps-mapbox-text-layer.h  maps-osm-changeset.c  maps-osm-changeset.h  maps-osm-node.c  maps-osm-node.h  maps-osm-oauth-proxy-call.c  maps-osm-oauth-proxy-call.h  maps-osm-object.c  maps-osm-object.h  (+15 more)
po/: LINGUAS  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  (+37 more)
scripts/: Makefile.am  README  exportMapStyle.js  extractPoiTypesFromID.js  serveMapStyle.js  updateOsmAmericana.js
scripts/map-style-web/: index.html  index.js  tiny-sdf.js
scripts/shield-overrides/: de.json
src/: Makefile-js.am  Makefile.am  account-row.ui  accountListBox.js  address.js  app-menu.ui  application.js  attribution-logo.ui  auxillaryView.js  boundingBox.js  busyMarker.js  check-in-dialog.ui  checkIn.js  checkInDialog.js  circleIconMarker.js  color.js  config.js.in  constants.js  contactPlace.js  context-menu.ui  contextMenu.js  coordinatePlace.js  downloads.js  epaf.js  exportViewDialog.js  facebookBackend.js  favoriteEditDialog.js  favoriteListRow.js  favorites-popover.ui  favoritesPopover.js  fitShapeLayer.js  foursquareBackend.js  foursquareGoaAuthorizer.js  geoJSONShapeLayer.js  geoJSONSource.js  geoJSONStyle.js  geoclue.js  geocode.js  geocodeService.js  gfx.js  (+176 more)
src/geojson-vt/: clip.js  convert.js  index.js  simplify.js  tile.js  transform.js  wrap.js
src/mapStyle/: aerial.js  airports.js  boundaries.js  buildings.js  defs.js  housenumbers.js  landcover.js  landuse.js  mapStyle.js  places.js  pois.js  rail.js  roads.js  stations.js  utils.js  water.js
src/socialService/: facebookBackend.js  foursquareBackend.js  socialPlace.js
src/togeojson/: togeojson.js
src/transit/: arrival.js  constants.js  departure.js  itinerary.js  juncture.js  leg.js  plan.js  route.js  routeType.js  stop.js  utils.js
src/transitplugins/: README  goMetro.js  gtfs.js  motis.js  motis2.js  openTripPlanner.js  openTripPlanner2.js  opendataCH.js  resrobot.js  transitous.js
src/xmldom/: dom.js  domparser.js  sax.js
tests/: addressTest.js  boundingBoxTest.js  colorTest.js  colorTests.js  downloadsTest.js  epafTest.js  meson.build  org.gnome.Maps.test.gresource.xml.in  osmNamesTest.js  placeIconsTest.js  placeStoreTest.js  placeZoomTest.js  test-wrapper.sh.in  test.in  timeTest.js  translationsTest.js  urisTest.js  urlsTest.js  utilsTest.js  wikipediaTest.js
